# axum-rust

./: .env  Cargo.toml
migrations/: 20250128145442_create_users_table.sql  20250131022723_create_books_table.sql
src/: main.rs
src/controllers/: auth.rs
src/helper/: file.rs
src/models/: book.rs  user.rs
src/routes/: api.rs
src/security/: jwt.rs
src/services/: auth.rs  book.rs  user.rs
