[package]
name = "axum-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
bcrypt = "0.16.0"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
jsonwebtoken = "9.3.0"
serde = "1.0.217"
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = "0.6.2"
