[package]
name = "axum-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
async-trait = "0.1.85"
axum = { version = "0.8.1", features = ["multipart"] }
bcrypt = "0.16.0"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
fast_image_resize = "5.1.2"
image = "0.25.5"
jsonwebtoken = "9.3.0"
multer = "3.1.0"
serde = "1.0.217"
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
validator = { version = "0.20.0", features = ["derive"] }
